fix: fix aside menu

--- a/pages/html/panda.html
+++ b/pages/html/panda.html
@@ -71,7 +71,10 @@
       <section class="animal">
         <aside class="animal__menu">
           <ul class="animal__list">
-            <li class="animal__item">
+            <li title="Pandas, Shenshuping Gengda Panda Center" class="animal__item">
+              <div class="animal__item-active">
+
+              </div>
               <a href="panda.html" class="animal__item-link">
                 <img src="../../assets/img/pets/panda.jpg" alt="">
               </a>
@@ -79,7 +82,7 @@
                 Pandas
               </div>
             </li>
-            <li class="animal__item">
+            <li title="Eagles, Catalina Island" class="animal__item">
               <a href="eagle.html" class="animal__item-link">
                 <img src="../../assets/img/pets/eagle.jpg" alt="">
               </a>
@@ -87,15 +90,15 @@
                 Eagles
               </div>
             </li>
-            <li class="animal__item">
+            <li title="Gorila, GRACE gorillas" class="animal__item">
               <a href="gorila.html"  class="animal__item-link">
                 <img src="../../assets/img/pets/gorilas.jpg" alt="">
               </a>
               <div class="animal__name">
-                Gorilas
+                Gorillas
               </div>
             </li>
-            <li class="animal__item">
+            <li title="Aligators, St. Augustine's Zoological Park" class="animal__item">
               <a href="aligator.html" class="animal__item-link">
                 <img src="../../assets/img/pets/crocodile.jpg" alt="">
               </a>
