feat: adaptive index and map files

--- a/pages/html/map.html
+++ b/pages/html/map.html
@@ -7,11 +7,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/block/media-map.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/block/header.css">
     <link rel="stylesheet" href="../css/block/footer.css">
     <link rel="stylesheet" href="../css/block/map.css">
     <link rel="stylesheet" href="../css/block/animation.css">
+    <link rel="stylesheet" href="../css/block/media-footer-map.css">
+    <link rel="stylesheet" href="../css/block/media-header.css">
+    <link rel="stylesheet" href="../css/block/media-map.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
 </head>
