--- a/pages/html/map.html
+++ b/pages/html/map.html
@@ -20,57 +20,62 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="menu">
-      <div class="container">
-        <nav class="menu__nav">
-          <ul class="menu__list">
-            <li class="menu__logo">
-              <a href="../../index.html">
-                <img src="../../assets/icons/header/logo.svg" alt="">
-              </a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="../../index.html">
-                about
-              </a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="map.html">
-                map
-              </a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="panda.html">
-                zoos
-              </a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">
-                contact us
-              </a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo">
-                design
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <div class="menu__account">
-          <button class="button menu__search">
-            <img src="../../assets/icons/header/search.svg" alt="">
+  <header class="menu">
+    <div class="container">
+      <nav class="menu__nav">
+        <ul class="menu__list">
+          <li class="menu__logo">
+            <a href="../../index.html">
+              <img src="../../assets/icons/header/logo.svg" alt="">
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a href="../../index.html" class="menu__list-link" href="">
+              about
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a href="map.html" class="menu__list-link" href="">
+              map
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a href="panda.html" class="menu__list-link" href="">
+              zoos
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="">
+              contact us
+            </a>
+          </li>
+          <li class="menu__list-item">
+            <a href ="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo" class="menu__list-link" href="">
+              design
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="menu__hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="menu__account">
+        <button class="button menu__search">
+          <img src="assets/icons/header/search.svg" alt="">
+        </button>
+        <div class="menu__account-manage">
+          <button class="menu__log-in button">
+            log in
           </button>
-          <div class="menu__account-manage">
-            <button class="menu__log-in button">
-              log in
-            </button>
-            <button class="menu__sign-up button">
-              sign up
-            </button>
-          </div>
+          <button class="menu__sign-up button">
+            sign up
+          </button>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
     <section class="map">
       <div class="container">
         <h2 class="subheader">
