fix: fix index popup icons

--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
     </div>
     <div id="accountPopUp" class="popup-container not-visible">
       <div class="popup-header">
-        <img src="../../assets/icons/header/logo.svg" alt="">
+        <img src="assets/icons/header/logo.svg" alt="">
       </div>
       <div class="popup-body">
         <div class="popup-choose__btn">
@@ -786,11 +786,11 @@
         </div>
         <div class="popup-social__btn">
           <button>
-            <img src="../../assets/icons/popup/google.svg" alt="google svg icon">
+            <img src="assets/icons/popup/google.svg" alt="google svg icon">
             Google Sign in
           </button>
           <button>
-            <img src="../../assets/icons/popup/facebook.svg" alt="">
+            <img src="assets/icons/popup/facebook.svg" alt="">
             Facebook Sign in
           </button>
         </div>
