fix: pop validation (required) and zoos slider

--- a/index.html
+++ b/index.html
@@ -797,21 +797,21 @@
       </div>
       <form id="createAccount" class="popup-form create">
         <label class="popup-form__label" for="name">name</label>
-        <input class="popup-form__input" id="name" type="text">
+        <input class="popup-form__input" id="name" type="text" required>
         <label class="popup-form__label" for="email">email</label>
-        <input class="popup-form__input" type="email">
+        <input class="popup-form__input" type="email" required>
         <label class="popup-form__label" for="password">password</label>
-        <input class="popup-form__input" id="password" type="text"> 
+        <input class="popup-form__input" id="password" type="text" required> 
         <label class="checkbox-label"><input class="popup-form__checkbox" id="agreement" type="checkbox" name="agreement" value="true">Agree with the &nbsp;<a href="">User Agreement</a>&nbsp; and &nbsp;<a href=""> Privacy Policy </a> </label>
         <button class="popup-form__btn"> 
           send
         </button>
       </form>
       <form id="logAccount" class="popup-form log-in">
-        <label class="popup-form__label" for="email">email</label>
-        <input class="popup-form__input" type="email">
+        <label class="popup-form__label" for="email" email</label>
+        <input class="popup-form__input" type="email" required>
         <label class="popup-form__label" for="password">password</label>
-        <input class="popup-form__input" id="password" type="text"> 
+        <input class="popup-form__input" id="password" type="text" required> 
         <button class="popup-form__btn"> 
           send
         </button>
@@ -826,9 +826,9 @@
       </h3>
       <form class="popup-form">
         <label class="popup-form__label" for="name">name</label>
-        <input class="popup-form__input" id="name" type="text">
+        <input class="popup-form__input" id="name" type="text" required>
         <label class="popup-form__label" for="email">email</label>
-        <input class="popup-form__input" type="email"> 
+        <input class="popup-form__input" type="email" required> 
         <label class="popup-form__label" for="feedback">Your Message</label>
         <input id="feedback" class="popup-form__input message" type="text"> 
         <button class="popup-form__btn"> 
